# gemini-ai-image-analysis

./: README.md  application_instructions.md  pyproject.toml
.opencode/agents/: supervisor.md  worker.md
.opencode/skills/code-review/: SKILL.md
.opencode/skills/dbt-data-analysis/: SKILL.md
.opencode/skills/dbt-development/: SKILL.md
.opencode/skills/playwright-cli-verification/: SKILL.md
.opencode/skills/user-testing/: SKILL.md
.opencode/skills/verification/: SKILL.md
agent_docs/development/: 2026-05-09-ai-image-cli.md
agent_docs/plans/: 2026-05-09-ai-image-cli-auth-update.md  2026-05-09-ai-image-cli-implementation-report.md
agent_docs/research/: 2026-05-09-ai-image-cli-research-and-spec.md
agent_docs/reviews/: 2026-05-09-review-ai-image-cli-auth-cache.md
agent_docs/verification/: 2026-05-09-ai-image-cli-auth-cache-verification.md  2026-05-09-ai-image-cli-auth-verification.md  2026-05-09-ai-image-cli-verification.md
skills/ai-image-cli/: SKILL.md
src/ai_image_cli/: __main__.py  cli.py  config.py  errors.py  formatters.py  gemini_client.py  image_inputs.py  models.py  prompts.py
tests/: test_cli.py  test_config.py  test_image_inputs.py  test_prompts.py
